# lamb

./: .dockerignore  .env.next.example  .gitignore  CLAUDE.md  Caddyfile  DOCKER_BUILDKIT_CACHE.md  MULTI_TOOL_ADD_TOOLS_FIX.md  MULTI_TOOL_ENDPOINT_FIX.md  MULTI_TOOL_FIX_CHANGELOG.md  MULTI_TOOL_FIX_COMPLETE.md  MULTI_TOOL_FIX_SUMMARY.md  MULTI_TOOL_TESTING_CHECKLIST.md  MULTI_TOOL_TEST_REPORT.md  MULTI_TOOL_UI_TEST_REPORT.md  README.md  deployLocal.md  deployment-notes.md  deployment.md  docker-compose-example.yaml  docker-compose-workers.yaml  docker-compose.firecrawl.yaml  docker-compose.next.build.yaml  docker-compose.next.gpu.yaml  docker-compose.next.yaml  docker-compose.yaml  docker.md  documentation_migration_plan.md  fix5_axios_interceptor_plan.md  opencode.json  test-buildkit-cache.sh  test_multi_tool_endpoints.sh
.github/recipes/: bump-dev-version.instructions.md
.github/workflows/: build-images.yml  remote-deploy.yml
Documentation/: 352-resilience-fixes-repro.md  DOCUMENTATION_INDEX.md  MULTI_TOOL_ASSISTANT_BACKEND_SPEC.md  MULTI_TOOL_ASSISTANT_FRONTEND_SPEC.md  MULTI_TOOL_ASSISTANT_PARALLEL_SPEC.md  MULTI_TOOL_DEV_PLAN.md  PHASE1_MODULE_SYSTEM.md  README.md  TOOL_CALLING_POC.md  deployLocal.md  deployNext.md  deployment-next-docker.md  docker-production-architecture-plan.md  functionality-review-2026-05-12.md  implementation_plan_313.md  issue_337_lamb_integration_plan.md  kb_server_plugin_architecture_v2.md  lamb_architecture_v2.md  llm_evaluation_frameworks_analysis.md  llm_evaluation_frameworks_analysis_complete.md  llm_evaluation_frameworks_extended.md  pre_existing_debt_handoff.md  security-auth-guard-and-account-disable.md  svelte-refactoring.md  tools.md
Documentation/ER-diagrams/: LAMB_Database_ER_Diagram.md
Documentation/architecture/: team-based-ownership-proposal.md
Documentation/issue#277-modular-and-monorepo/: BACKEND_DOCKER_VS_LOCAL_LTI.md  PHASE1_MODULE_SYSTEM.md  PHASE2_FRONTEND_MONOREPO.md  PHASE3_CHAT_MODULE_MIGRATION.md  PHASE4_FILE_EVALUATION_MODULE.md  PHASE4_FILE_EVAL_REVIEW_GUIDE.md  PR_DESCRIPTION_EN.md  phase3-bugs.md  phase3-minimal-fix.md
Documentation/issues to debug/: file-deletion-404-fix.md
Documentation/projects/: aac-backlog.md  lti_session_management_fix.md
backend/: .env.example  Dockerfile  ENVIRONMENT_VARIABLES.md  config.py  docker-entrypoint.py  file_eval_snapshot.txt  main.py  requirements-base.txt  requirements-ml.txt  requirements.txt  test_gemini_image.py  test_multi_tool_basic.py  test_multi_tool_simple.py  test_verbose_orchestrator.py
backend/lamb/: auth_context.py  (+11 more)
docs/: POST_MERGE_CHANGES.md  security-auth-guard-and-account-disable.md
frontend/: DOCKER_CHANGES.md  DOCKER_CI_UPDATES.md  FILES_CREATED.md  MERGE_DEV_TO_PHASE4.md  MIGRATION_MONOREPO.md  PHASE2_BUGS.md  PHASE2_COMMIT_GUIDE.md  PHASE2_COMPLETION_SUMMARY.md  PHASE2_EXECUTION_PLAN.md  README_PHASE2_COMPLETE.md  package.json  pnpm-lock.yaml
lamb-kb-server/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.test.yml  pyproject.toml
lamb-kb-server-stable/: Dockerfile.server  Dockerfile.webapp  docker-compose.yaml
lamb-kb-server/Documentation/: issue_334_known_bugs.md  issue_337_lamb_integration_adrs.md
lamb-kb-server/backend/: config.py  dependencies.py  main.py
lamb-kb-server/backend/database/: connection.py  models.py
lamb-kb-server/backend/plugins/: base.py
lamb-kb-server/backend/plugins/chunking/: _common.py  by_page.py  by_section.py  hierarchical.py  simple.py
lamb-kb-server/backend/plugins/embedding/: local.py  ollama.py  openai.py
lamb-kb-server/backend/plugins/vector_db/: chromadb_backend.py  qdrant_backend.py
lamb-kb-server/backend/routers/: collections.py  content.py  jobs.py  query.py  system.py
lamb-kb-server/backend/schemas/: collection.py  common.py  content.py  jobs.py  query.py
lamb-kb-server/backend/services/: collection_service.py  ingestion_service.py  query_service.py
lamb-kb-server/backend/tasks/: worker.py
lamb-kb-server/scripts/: manual_mutation_test.sh  manual_mutation_test_extended.sh  manual_mutation_test_final.sh  run_tests.sh
lamb-kb-server/tests/: README.md  _fakes.py  _helpers.py  conftest.py  test_auth.py  test_chunking.py  test_collections.py  test_content_pipeline.py  test_edge_cases.py  test_system.py  test_vector_db.py
lamb-kb-server/tests/e2e/: _compose.py  _vcr.py  conftest.py  test_auth_boundary.py  test_concurrency.py  test_crash_recovery.py  test_error_paths.py  test_multitenancy.py  test_pipeline_matrix.py  test_server_smoke.py
lamb-kb-server/tests/integration/: conftest.py  test_auth.py  test_collections.py  test_content_pipeline.py  test_edge_cases.py  test_jobs.py  test_main_lifespan.py  test_query.py  test_system.py  test_worker.py
lamb-kb-server/tests/unit/: conftest.py  test_chunking.py  test_config.py  test_database.py  test_dependencies.py  test_embedding_plugins.py  test_plugin_discovery.py  test_plugin_registry.py  test_schemas.py  test_services.py  test_vector_db_chromadb.py  test_vector_db_qdrant.py
library-manager/: pyproject.toml
open-webui/: Dockerfile
scripts/: clean_kb_robust.py  clean_knowledge_base_service.py  migrate_kb_registry.py  setup.sh
(+1045 files in other folders)
